samples/_failures_safe/1761225713_c6c828_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba431336.c: In function ‘main’:
./samples/SAFE/__tmp_ba431336.c:129:5: error: ‘analyze_log’ undeclared (first use in this function); did you mean ‘analyze_logs’?
  129 |     analyze_log
      |     ^~~~~~~~~~~
      |     analyze_logs
./samples/SAFE/__tmp_ba431336.c:129:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ba431336.c:129:16: error: expected ‘;’ at end of input
  129 |     analyze_log
      |                ^
      |                ;
./samples/SAFE/__tmp_ba431336.c:129:5: error: expected declaration or statement at end of input
  129 |     analyze_log
      |     ^~~~~~~~~~~
